compiladores/ProjetoBase/compilador.output
Terminals unused in grammar

    PROCEDURE
    FUNCTION
    GOTO
    IF
    THEN
    ELSE
    WHILE
    DO
    ARRAY
    OF
    LABEL
    TYPE


Grammar

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    3 $@2: %empty

    4 bloco: parte_declara_vars $@2 comando_composto

    5 parte_declara_vars: var

    6 $@3: %empty

    7 var: $@3 VAR declara_vars
    8    | %empty

    9 declara_vars: declara_vars declara_var
   10             | declara_var

   11 declara_var: lista_id_var DOIS_PONTOS tipo PONTO_E_VIRGULA

   12 tipo: IDENT

   13 lista_id_var: lista_id_var VIRGULA IDENT
   14             | IDENT

   15 lista_idents: lista_idents VIRGULA IDENT
   16             | IDENT

   17 comando_composto: T_BEGIN comandos T_END

   18 comandos: comandos atribuicao
   19         | atribuicao
   20         | comandos leitura
   21         | leitura
   22         | comandos escrita
   23         | escrita

   24 leitura: READ ABRE_PARENTESES lista_read FECHA_PARENTESES PONTO_E_VIRGULA

   25 lista_read: lista_read VIRGULA IDENT
   26           | IDENT

   27 escrita: WRITE ABRE_PARENTESES lista_write FECHA_PARENTESES PONTO_E_VIRGULA

   28 lista_write: lista_write VIRGULA IDENT
   29            | IDENT
   30            | lista_write VIRGULA NUM
   31            | NUM

   32 $@4: %empty

   33 $@5: %empty

   34 atribuicao: IDENT $@4 ATRIBUICAO expressao $@5 PONTO_E_VIRGULA

   35 expressao: expressao MAIOR expressao_simples
   36          | expressao MAIOR_IGUAL expressao_simples
   37          | expressao MENOR expressao_simples
   38          | expressao MENOR_IGUAL expressao_simples
   39          | expressao IGUAL expressao_simples
   40          | expressao DESIGUAL expressao_simples
   41          | expressao_simples

   42 expressao_simples: expressao_simples SOMA termo
   43                  | expressao_simples SUB termo
   44                  | expressao_simples OR termo
   45                  | termo

   46 termo: termo MULT fator
   47      | termo DIV fator
   48      | termo AND fator
   49      | fator

   50 fator: NUM
   51      | IDENT
   52      | TRUE
   53      | FALSE
   54      | NOT fator
   55      | ABRE_PARENTESES expressao FECHA_PARENTESES


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PROGRAM (258) 2
    ABRE_PARENTESES (259) 2 24 27 55
    FECHA_PARENTESES (260) 2 24 27 55
    VIRGULA (261) 13 15 25 28 30
    PONTO_E_VIRGULA (262) 2 11 24 27 34
    DOIS_PONTOS (263) 11
    PONTO (264) 2
    T_BEGIN (265) 17
    T_END (266) 17
    VAR (267) 7
    IDENT (268) 2 12 13 14 15 16 25 26 28 29 34 51
    NUM (269) 30 31 50
    ATRIBUICAO (270) 34
    PROCEDURE (271)
    FUNCTION (272)
    GOTO (273)
    IF (274)
    THEN (275)
    ELSE (276)
    WHILE (277)
    DO (278)
    ARRAY (279)
    OF (280)
    LABEL (281)
    TYPE (282)
    AND (283) 48
    OR (284) 44
    NOT (285) 54
    SOMA (286) 42
    SUB (287) 43
    MULT (288) 46
    DIV (289) 47
    TRUE (290) 52
    FALSE (291) 53
    READ (292) 24
    WRITE (293) 27
    MAIOR (294) 35
    MAIOR_IGUAL (295) 36
    MENOR (296) 37
    MENOR_IGUAL (297) 38
    IGUAL (298) 39
    DESIGUAL (299) 40


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    programa (46)
        on left: 2
        on right: 0
    $@1 (47)
        on left: 1
        on right: 2
    bloco (48)
        on left: 4
        on right: 2
    $@2 (49)
        on left: 3
        on right: 4
    parte_declara_vars (50)
        on left: 5
        on right: 4
    var (51)
        on left: 7 8
        on right: 5
    $@3 (52)
        on left: 6
        on right: 7
    declara_vars (53)
        on left: 9 10
        on right: 7 9
    declara_var (54)
        on left: 11
        on right: 9 10
    tipo (55)
        on left: 12
        on right: 11
    lista_id_var (56)
        on left: 13 14
        on right: 11 13
    lista_idents (57)
        on left: 15 16
        on right: 2 15
    comando_composto (58)
        on left: 17
        on right: 4
    comandos (59)
        on left: 18 19 20 21 22 23
        on right: 17 18 20 22
    leitura (60)
        on left: 24
        on right: 20 21
    lista_read (61)
        on left: 25 26
        on right: 24 25
    escrita (62)
        on left: 27
        on right: 22 23
    lista_write (63)
        on left: 28 29 30 31
        on right: 27 28 30
    atribuicao (64)
        on left: 34
        on right: 18 19
    $@4 (65)
        on left: 32
        on right: 34
    $@5 (66)
        on left: 33
        on right: 34
    expressao (67)
        on left: 35 36 37 38 39 40 41
        on right: 34 35 36 37 38 39 40 55
    expressao_simples (68)
        on left: 42 43 44 45
        on right: 35 36 37 38 39 40 41 42 43 44
    termo (69)
        on left: 46 47 48 49
        on right: 42 43 44 45 46 47 48
    fator (70)
        on left: 50 51 52 53 54 55
        on right: 46 47 48 49 54


State 0

    0 $accept: . programa $end

    $default  reduce using rule 1 ($@1)

    programa  go to state 1
    $@1       go to state 2


State 1

    0 $accept: programa . $end

    $end  shift, and go to state 3


State 2

    2 programa: $@1 . PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    PROGRAM  shift, and go to state 4


State 3

    0 $accept: programa $end .

    $default  accept


State 4

    2 programa: $@1 PROGRAM . IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 5


State 5

    2 programa: $@1 PROGRAM IDENT . ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  shift, and go to state 6


State 6

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES . lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 7

    lista_idents  go to state 8


State 7

   16 lista_idents: IDENT .

    $default  reduce using rule 16 (lista_idents)


State 8

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents . FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO
   15 lista_idents: lista_idents . VIRGULA IDENT

    FECHA_PARENTESES  shift, and go to state 9
    VIRGULA           shift, and go to state 10


State 9

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES . PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  shift, and go to state 11


State 10

   15 lista_idents: lista_idents VIRGULA . IDENT

    IDENT  shift, and go to state 12


State 11

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA . bloco PONTO

    T_BEGIN   reduce using rule 8 (var)
    $default  reduce using rule 6 ($@3)

    bloco               go to state 13
    parte_declara_vars  go to state 14
    var                 go to state 15
    $@3                 go to state 16


State 12

   15 lista_idents: lista_idents VIRGULA IDENT .

    $default  reduce using rule 15 (lista_idents)


State 13

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco . PONTO

    PONTO  shift, and go to state 17


State 14

    4 bloco: parte_declara_vars . $@2 comando_composto

    $default  reduce using rule 3 ($@2)

    $@2  go to state 18


State 15

    5 parte_declara_vars: var .

    $default  reduce using rule 5 (parte_declara_vars)


State 16

    7 var: $@3 . VAR declara_vars

    VAR  shift, and go to state 19


State 17

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO .

    $default  reduce using rule 2 (programa)


State 18

    4 bloco: parte_declara_vars $@2 . comando_composto

    T_BEGIN  shift, and go to state 20

    comando_composto  go to state 21


State 19

    7 var: $@3 VAR . declara_vars

    IDENT  shift, and go to state 22

    declara_vars  go to state 23
    declara_var   go to state 24
    lista_id_var  go to state 25


State 20

   17 comando_composto: T_BEGIN . comandos T_END

    IDENT  shift, and go to state 26
    READ   shift, and go to state 27
    WRITE  shift, and go to state 28

    comandos    go to state 29
    leitura     go to state 30
    escrita     go to state 31
    atribuicao  go to state 32


State 21

    4 bloco: parte_declara_vars $@2 comando_composto .

    $default  reduce using rule 4 (bloco)


State 22

   14 lista_id_var: IDENT .

    $default  reduce using rule 14 (lista_id_var)


State 23

    7 var: $@3 VAR declara_vars .
    9 declara_vars: declara_vars . declara_var

    IDENT  shift, and go to state 22

    $default  reduce using rule 7 (var)

    declara_var   go to state 33
    lista_id_var  go to state 25


State 24

   10 declara_vars: declara_var .

    $default  reduce using rule 10 (declara_vars)


State 25

   11 declara_var: lista_id_var . DOIS_PONTOS tipo PONTO_E_VIRGULA
   13 lista_id_var: lista_id_var . VIRGULA IDENT

    VIRGULA      shift, and go to state 34
    DOIS_PONTOS  shift, and go to state 35


State 26

   34 atribuicao: IDENT . $@4 ATRIBUICAO expressao $@5 PONTO_E_VIRGULA

    $default  reduce using rule 32 ($@4)

    $@4  go to state 36


State 27

   24 leitura: READ . ABRE_PARENTESES lista_read FECHA_PARENTESES PONTO_E_VIRGULA

    ABRE_PARENTESES  shift, and go to state 37


State 28

   27 escrita: WRITE . ABRE_PARENTESES lista_write FECHA_PARENTESES PONTO_E_VIRGULA

    ABRE_PARENTESES  shift, and go to state 38


State 29

   17 comando_composto: T_BEGIN comandos . T_END
   18 comandos: comandos . atribuicao
   20         | comandos . leitura
   22         | comandos . escrita

    T_END  shift, and go to state 39
    IDENT  shift, and go to state 26
    READ   shift, and go to state 27
    WRITE  shift, and go to state 28

    leitura     go to state 40
    escrita     go to state 41
    atribuicao  go to state 42


State 30

   21 comandos: leitura .

    $default  reduce using rule 21 (comandos)


State 31

   23 comandos: escrita .

    $default  reduce using rule 23 (comandos)


State 32

   19 comandos: atribuicao .

    $default  reduce using rule 19 (comandos)


State 33

    9 declara_vars: declara_vars declara_var .

    $default  reduce using rule 9 (declara_vars)


State 34

   13 lista_id_var: lista_id_var VIRGULA . IDENT

    IDENT  shift, and go to state 43


State 35

   11 declara_var: lista_id_var DOIS_PONTOS . tipo PONTO_E_VIRGULA

    IDENT  shift, and go to state 44

    tipo  go to state 45


State 36

   34 atribuicao: IDENT $@4 . ATRIBUICAO expressao $@5 PONTO_E_VIRGULA

    ATRIBUICAO  shift, and go to state 46


State 37

   24 leitura: READ ABRE_PARENTESES . lista_read FECHA_PARENTESES PONTO_E_VIRGULA

    IDENT  shift, and go to state 47

    lista_read  go to state 48


State 38

   27 escrita: WRITE ABRE_PARENTESES . lista_write FECHA_PARENTESES PONTO_E_VIRGULA

    IDENT  shift, and go to state 49
    NUM    shift, and go to state 50

    lista_write  go to state 51


State 39

   17 comando_composto: T_BEGIN comandos T_END .

    $default  reduce using rule 17 (comando_composto)


State 40

   20 comandos: comandos leitura .

    $default  reduce using rule 20 (comandos)


State 41

   22 comandos: comandos escrita .

    $default  reduce using rule 22 (comandos)


State 42

   18 comandos: comandos atribuicao .

    $default  reduce using rule 18 (comandos)


State 43

   13 lista_id_var: lista_id_var VIRGULA IDENT .

    $default  reduce using rule 13 (lista_id_var)


State 44

   12 tipo: IDENT .

    $default  reduce using rule 12 (tipo)


State 45

   11 declara_var: lista_id_var DOIS_PONTOS tipo . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 52


State 46

   34 atribuicao: IDENT $@4 ATRIBUICAO . expressao $@5 PONTO_E_VIRGULA

    ABRE_PARENTESES  shift, and go to state 53
    IDENT            shift, and go to state 54
    NUM              shift, and go to state 55
    NOT              shift, and go to state 56
    TRUE             shift, and go to state 57
    FALSE            shift, and go to state 58

    expressao          go to state 59
    expressao_simples  go to state 60
    termo              go to state 61
    fator              go to state 62


State 47

   26 lista_read: IDENT .

    $default  reduce using rule 26 (lista_read)


State 48

   24 leitura: READ ABRE_PARENTESES lista_read . FECHA_PARENTESES PONTO_E_VIRGULA
   25 lista_read: lista_read . VIRGULA IDENT

    FECHA_PARENTESES  shift, and go to state 63
    VIRGULA           shift, and go to state 64


State 49

   29 lista_write: IDENT .

    $default  reduce using rule 29 (lista_write)


State 50

   31 lista_write: NUM .

    $default  reduce using rule 31 (lista_write)


State 51

   27 escrita: WRITE ABRE_PARENTESES lista_write . FECHA_PARENTESES PONTO_E_VIRGULA
   28 lista_write: lista_write . VIRGULA IDENT
   30            | lista_write . VIRGULA NUM

    FECHA_PARENTESES  shift, and go to state 65
    VIRGULA           shift, and go to state 66


State 52

   11 declara_var: lista_id_var DOIS_PONTOS tipo PONTO_E_VIRGULA .

    $default  reduce using rule 11 (declara_var)


State 53

   55 fator: ABRE_PARENTESES . expressao FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 53
    IDENT            shift, and go to state 54
    NUM              shift, and go to state 55
    NOT              shift, and go to state 56
    TRUE             shift, and go to state 57
    FALSE            shift, and go to state 58

    expressao          go to state 67
    expressao_simples  go to state 60
    termo              go to state 61
    fator              go to state 62


State 54

   51 fator: IDENT .

    $default  reduce using rule 51 (fator)


State 55

   50 fator: NUM .

    $default  reduce using rule 50 (fator)


State 56

   54 fator: NOT . fator

    ABRE_PARENTESES  shift, and go to state 53
    IDENT            shift, and go to state 54
    NUM              shift, and go to state 55
    NOT              shift, and go to state 56
    TRUE             shift, and go to state 57
    FALSE            shift, and go to state 58

    fator  go to state 68


State 57

   52 fator: TRUE .

    $default  reduce using rule 52 (fator)


State 58

   53 fator: FALSE .

    $default  reduce using rule 53 (fator)


State 59

   34 atribuicao: IDENT $@4 ATRIBUICAO expressao . $@5 PONTO_E_VIRGULA
   35 expressao: expressao . MAIOR expressao_simples
   36          | expressao . MAIOR_IGUAL expressao_simples
   37          | expressao . MENOR expressao_simples
   38          | expressao . MENOR_IGUAL expressao_simples
   39          | expressao . IGUAL expressao_simples
   40          | expressao . DESIGUAL expressao_simples

    MAIOR        shift, and go to state 69
    MAIOR_IGUAL  shift, and go to state 70
    MENOR        shift, and go to state 71
    MENOR_IGUAL  shift, and go to state 72
    IGUAL        shift, and go to state 73
    DESIGUAL     shift, and go to state 74

    $default  reduce using rule 33 ($@5)

    $@5  go to state 75


State 60

   41 expressao: expressao_simples .
   42 expressao_simples: expressao_simples . SOMA termo
   43                  | expressao_simples . SUB termo
   44                  | expressao_simples . OR termo

    OR    shift, and go to state 76
    SOMA  shift, and go to state 77
    SUB   shift, and go to state 78

    $default  reduce using rule 41 (expressao)


State 61

   45 expressao_simples: termo .
   46 termo: termo . MULT fator
   47      | termo . DIV fator
   48      | termo . AND fator

    AND   shift, and go to state 79
    MULT  shift, and go to state 80
    DIV   shift, and go to state 81

    $default  reduce using rule 45 (expressao_simples)


State 62

   49 termo: fator .

    $default  reduce using rule 49 (termo)


State 63

   24 leitura: READ ABRE_PARENTESES lista_read FECHA_PARENTESES . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 82


State 64

   25 lista_read: lista_read VIRGULA . IDENT

    IDENT  shift, and go to state 83


State 65

   27 escrita: WRITE ABRE_PARENTESES lista_write FECHA_PARENTESES . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 84


State 66

   28 lista_write: lista_write VIRGULA . IDENT
   30            | lista_write VIRGULA . NUM

    IDENT  shift, and go to state 85
    NUM    shift, and go to state 86


State 67

   35 expressao: expressao . MAIOR expressao_simples
   36          | expressao . MAIOR_IGUAL expressao_simples
   37          | expressao . MENOR expressao_simples
   38          | expressao . MENOR_IGUAL expressao_simples
   39          | expressao . IGUAL expressao_simples
   40          | expressao . DESIGUAL expressao_simples
   55 fator: ABRE_PARENTESES expressao . FECHA_PARENTESES

    FECHA_PARENTESES  shift, and go to state 87
    MAIOR             shift, and go to state 69
    MAIOR_IGUAL       shift, and go to state 70
    MENOR             shift, and go to state 71
    MENOR_IGUAL       shift, and go to state 72
    IGUAL             shift, and go to state 73
    DESIGUAL          shift, and go to state 74


State 68

   54 fator: NOT fator .

    $default  reduce using rule 54 (fator)


State 69

   35 expressao: expressao MAIOR . expressao_simples

    ABRE_PARENTESES  shift, and go to state 53
    IDENT            shift, and go to state 54
    NUM              shift, and go to state 55
    NOT              shift, and go to state 56
    TRUE             shift, and go to state 57
    FALSE            shift, and go to state 58

    expressao_simples  go to state 88
    termo              go to state 61
    fator              go to state 62


State 70

   36 expressao: expressao MAIOR_IGUAL . expressao_simples

    ABRE_PARENTESES  shift, and go to state 53
    IDENT            shift, and go to state 54
    NUM              shift, and go to state 55
    NOT              shift, and go to state 56
    TRUE             shift, and go to state 57
    FALSE            shift, and go to state 58

    expressao_simples  go to state 89
    termo              go to state 61
    fator              go to state 62


State 71

   37 expressao: expressao MENOR . expressao_simples

    ABRE_PARENTESES  shift, and go to state 53
    IDENT            shift, and go to state 54
    NUM              shift, and go to state 55
    NOT              shift, and go to state 56
    TRUE             shift, and go to state 57
    FALSE            shift, and go to state 58

    expressao_simples  go to state 90
    termo              go to state 61
    fator              go to state 62


State 72

   38 expressao: expressao MENOR_IGUAL . expressao_simples

    ABRE_PARENTESES  shift, and go to state 53
    IDENT            shift, and go to state 54
    NUM              shift, and go to state 55
    NOT              shift, and go to state 56
    TRUE             shift, and go to state 57
    FALSE            shift, and go to state 58

    expressao_simples  go to state 91
    termo              go to state 61
    fator              go to state 62


State 73

   39 expressao: expressao IGUAL . expressao_simples

    ABRE_PARENTESES  shift, and go to state 53
    IDENT            shift, and go to state 54
    NUM              shift, and go to state 55
    NOT              shift, and go to state 56
    TRUE             shift, and go to state 57
    FALSE            shift, and go to state 58

    expressao_simples  go to state 92
    termo              go to state 61
    fator              go to state 62


State 74

   40 expressao: expressao DESIGUAL . expressao_simples

    ABRE_PARENTESES  shift, and go to state 53
    IDENT            shift, and go to state 54
    NUM              shift, and go to state 55
    NOT              shift, and go to state 56
    TRUE             shift, and go to state 57
    FALSE            shift, and go to state 58

    expressao_simples  go to state 93
    termo              go to state 61
    fator              go to state 62


State 75

   34 atribuicao: IDENT $@4 ATRIBUICAO expressao $@5 . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 94


State 76

   44 expressao_simples: expressao_simples OR . termo

    ABRE_PARENTESES  shift, and go to state 53
    IDENT            shift, and go to state 54
    NUM              shift, and go to state 55
    NOT              shift, and go to state 56
    TRUE             shift, and go to state 57
    FALSE            shift, and go to state 58

    termo  go to state 95
    fator  go to state 62


State 77

   42 expressao_simples: expressao_simples SOMA . termo

    ABRE_PARENTESES  shift, and go to state 53
    IDENT            shift, and go to state 54
    NUM              shift, and go to state 55
    NOT              shift, and go to state 56
    TRUE             shift, and go to state 57
    FALSE            shift, and go to state 58

    termo  go to state 96
    fator  go to state 62


State 78

   43 expressao_simples: expressao_simples SUB . termo

    ABRE_PARENTESES  shift, and go to state 53
    IDENT            shift, and go to state 54
    NUM              shift, and go to state 55
    NOT              shift, and go to state 56
    TRUE             shift, and go to state 57
    FALSE            shift, and go to state 58

    termo  go to state 97
    fator  go to state 62


State 79

   48 termo: termo AND . fator

    ABRE_PARENTESES  shift, and go to state 53
    IDENT            shift, and go to state 54
    NUM              shift, and go to state 55
    NOT              shift, and go to state 56
    TRUE             shift, and go to state 57
    FALSE            shift, and go to state 58

    fator  go to state 98


State 80

   46 termo: termo MULT . fator

    ABRE_PARENTESES  shift, and go to state 53
    IDENT            shift, and go to state 54
    NUM              shift, and go to state 55
    NOT              shift, and go to state 56
    TRUE             shift, and go to state 57
    FALSE            shift, and go to state 58

    fator  go to state 99


State 81

   47 termo: termo DIV . fator

    ABRE_PARENTESES  shift, and go to state 53
    IDENT            shift, and go to state 54
    NUM              shift, and go to state 55
    NOT              shift, and go to state 56
    TRUE             shift, and go to state 57
    FALSE            shift, and go to state 58

    fator  go to state 100


State 82

   24 leitura: READ ABRE_PARENTESES lista_read FECHA_PARENTESES PONTO_E_VIRGULA .

    $default  reduce using rule 24 (leitura)


State 83

   25 lista_read: lista_read VIRGULA IDENT .

    $default  reduce using rule 25 (lista_read)


State 84

   27 escrita: WRITE ABRE_PARENTESES lista_write FECHA_PARENTESES PONTO_E_VIRGULA .

    $default  reduce using rule 27 (escrita)


State 85

   28 lista_write: lista_write VIRGULA IDENT .

    $default  reduce using rule 28 (lista_write)


State 86

   30 lista_write: lista_write VIRGULA NUM .

    $default  reduce using rule 30 (lista_write)


State 87

   55 fator: ABRE_PARENTESES expressao FECHA_PARENTESES .

    $default  reduce using rule 55 (fator)


State 88

   35 expressao: expressao MAIOR expressao_simples .
   42 expressao_simples: expressao_simples . SOMA termo
   43                  | expressao_simples . SUB termo
   44                  | expressao_simples . OR termo

    OR    shift, and go to state 76
    SOMA  shift, and go to state 77
    SUB   shift, and go to state 78

    $default  reduce using rule 35 (expressao)


State 89

   36 expressao: expressao MAIOR_IGUAL expressao_simples .
   42 expressao_simples: expressao_simples . SOMA termo
   43                  | expressao_simples . SUB termo
   44                  | expressao_simples . OR termo

    OR    shift, and go to state 76
    SOMA  shift, and go to state 77
    SUB   shift, and go to state 78

    $default  reduce using rule 36 (expressao)


State 90

   37 expressao: expressao MENOR expressao_simples .
   42 expressao_simples: expressao_simples . SOMA termo
   43                  | expressao_simples . SUB termo
   44                  | expressao_simples . OR termo

    OR    shift, and go to state 76
    SOMA  shift, and go to state 77
    SUB   shift, and go to state 78

    $default  reduce using rule 37 (expressao)


State 91

   38 expressao: expressao MENOR_IGUAL expressao_simples .
   42 expressao_simples: expressao_simples . SOMA termo
   43                  | expressao_simples . SUB termo
   44                  | expressao_simples . OR termo

    OR    shift, and go to state 76
    SOMA  shift, and go to state 77
    SUB   shift, and go to state 78

    $default  reduce using rule 38 (expressao)


State 92

   39 expressao: expressao IGUAL expressao_simples .
   42 expressao_simples: expressao_simples . SOMA termo
   43                  | expressao_simples . SUB termo
   44                  | expressao_simples . OR termo

    OR    shift, and go to state 76
    SOMA  shift, and go to state 77
    SUB   shift, and go to state 78

    $default  reduce using rule 39 (expressao)


State 93

   40 expressao: expressao DESIGUAL expressao_simples .
   42 expressao_simples: expressao_simples . SOMA termo
   43                  | expressao_simples . SUB termo
   44                  | expressao_simples . OR termo

    OR    shift, and go to state 76
    SOMA  shift, and go to state 77
    SUB   shift, and go to state 78

    $default  reduce using rule 40 (expressao)


State 94

   34 atribuicao: IDENT $@4 ATRIBUICAO expressao $@5 PONTO_E_VIRGULA .

    $default  reduce using rule 34 (atribuicao)


State 95

   44 expressao_simples: expressao_simples OR termo .
   46 termo: termo . MULT fator
   47      | termo . DIV fator
   48      | termo . AND fator

    AND   shift, and go to state 79
    MULT  shift, and go to state 80
    DIV   shift, and go to state 81

    $default  reduce using rule 44 (expressao_simples)


State 96

   42 expressao_simples: expressao_simples SOMA termo .
   46 termo: termo . MULT fator
   47      | termo . DIV fator
   48      | termo . AND fator

    AND   shift, and go to state 79
    MULT  shift, and go to state 80
    DIV   shift, and go to state 81

    $default  reduce using rule 42 (expressao_simples)


State 97

   43 expressao_simples: expressao_simples SUB termo .
   46 termo: termo . MULT fator
   47      | termo . DIV fator
   48      | termo . AND fator

    AND   shift, and go to state 79
    MULT  shift, and go to state 80
    DIV   shift, and go to state 81

    $default  reduce using rule 43 (expressao_simples)


State 98

   48 termo: termo AND fator .

    $default  reduce using rule 48 (termo)


State 99

   46 termo: termo MULT fator .

    $default  reduce using rule 46 (termo)


State 100

   47 termo: termo DIV fator .

    $default  reduce using rule 47 (termo)
